# fast-llm-security-guardrails

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.md  README.md  THIRD-PARTY-NOTICES.md  pyproject.toml  zenguard_library.ipynb
.github/workflows/: github-actions.yaml
docs/colabs/: allowed_topics.ipynb  banned_topics.ipynb  keywords.ipynb  pii.ipynb  secrets.ipynb  toxicity.ipynb  zenguard_library.ipynb
docs/policies/: zenguard-red-chrome-extension-policy.md
tests/: conftest.py  e2e_test.py  openai_chat_e2e_test.py  openai_chat_funcionality_e2e_test.py  pentest.py  zenguard_e2e_test.py
zenguard/: __init__.py  zenguard.py
zenguard-ai/: pyproject.toml
zenguard/ai_clients/: openai.py
zenguard/pentest/prompt_injections/: __init__.py  _utils.py  config.py  prompt_data.py  prompting.py  run.py  scoring.py  visualization.py
