[tool.poetry]
name = "zenguard"
version = "0.1.1"
description = "Plug-and-play production grade security for GenAI applications"
authors = ["ZenGuard Team <hello@zenguard.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
