[tool.poetry]
name = "zenguard"
version = "0.1.12"
description = "Fast production grade security for GenAI applications"
authors = ["ZenGuard Team <hello@zenguard.ai>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
httpx = ">=0.24.0,<1.0.0"
tqdm = "^4.66.2"
openai = "^1.14.2"
rapidfuzz = "^3.7.0"
pandas = "^2.2.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
